# atom3d

./: .env.template  .gitattributes  .gitignore  CNAME  LICENSE  Makefile  README.md  README.rst  _config.yml  codecov.yml  index.md  lba.md  lep.md  msp.md  pip.md  psr.md  pytest.ini  requirements.txt  res.md  rsr.md  setup.py  smp.md  tox.ini
.github/workflows/: codecov.yml  main.yml  package.yml  python-package.yml
_data/: navigation.yml  sidebar.yml
_image-maps/: smp.md
_layouts/: default.html
atom3d/: __init__.py
atom3d/cpp-reader/: CMakeLists.txt
atom3d/data/: example.py
atom3d/datasets/: __init__.py  __main__.py  datasets.py  scores.py
atom3d/ff/: convert.py  prepare.py
atom3d/filters/: filters.py  pdb.py  scop.py  sequence.py
atom3d/lap/: ensemble.py  label.py  prepare.py
atom3d/lba/: create_hdf5.py  get_labels.py
atom3d/lep/: ensemble.py  label.py  prepare.py
atom3d/lmdb-reader/: Makefile  read_lmdb.cpp
atom3d/models/: base.py  cnn.py  enn.py  ff.py  gnn.py  mlp.py
atom3d/mpp/: add_cv_atom.py  convert_qm9.py  convert_qm9_from_sdf_to_hdf5.py  convert_qm9_from_sdf_to_npz.py  create_qm9_split.py  data_qm9_for_ptgeom.py
atom3d/msp/: addHpyro.py  check_resi.py  convert_mutation_from_hdf5_to_npz.py  ensemble.py  label.py  prepare.py  process.py  pyro_mutate.py
benchmarking/: README.md
docs/: Makefile  conf.py  contributing.rst  create_docs.sh  creating_datasets.rst  data_formats.rst  getting_started.rst  index.rst  requirements.txt  training_models.rst  using_datasets.rst
metadata/: README.md  pdb_entry_type.txt  scop-cla-latest.txt
(+561 files in other folders)
